Formating bassline section

--- a/main.tex
+++ b/main.tex
@@ -30,119 +30,118 @@ Instead what I'm going to do is run you through how to create a small song---the
 
 \section{Starting Out}
 
-The first screen you will see after the Nintendo logo passes will be the Song screen.
 
-The basic structure of LSDJ:
 
-In the song screen you place numbered blocks called Chains, inside these chain blocks you create numbered blocks called Phrases. Inside phrases you place musical notes which tell the program what to play. Inside each phrase you are able to create Instruments which tell each of the notes what to sound like.
+\paragraph{Basic structure of LSDJ}
 
-From the song screen hold select and press up. This will navigate to the options menu.
+The first screen you will see after the Nintendo logo passes will be the \textit{Song} screen.
+%
+In the song screen you place numbered blocks called \textit{Chains}, inside these chain blocks you create numbered blocks called \textit{Phrases}. Inside phrases you place musical notes which tell the program what to play. Inside each phrase you are able to create \textit{Instruments} which tell each of the notes what to sound like.
 
-Here you will be able to change many global parameters which affect your song and even the whole program.
+%\paragraph{First steps in the options menu}
 
-Highlight the tempo field with the control pad, hold A and press up, down, left or right to experiment with changing the tempo of the song.
+\begin{enumerate}
 
-[The tempo is the speed at which your entire song is played. It is measured in Beats Per Minutes, or BPM]
 
-Let's change the tempo to 140 BPM.
 
-I'm showing you this first to give you a taster of how most parameters/fields in lsdj are altered, by holding A and using the control pad.
+\item From the song screen hold select and press up. This will navigate to the options menu.
 
-Once you've changed the tempo, hold select and push down to return to the Song Screen.
+\item Here you will be able to change many global parameters which affect your song and even the whole program.
+
+\item Highlight the tempo\footnote{The tempo is the speed at which your entire song is played. It is measured in Beats Per Minutes, or BPM} field with the control pad, hold A and press up, down, left or right to experiment with changing the tempo of the song.
+
+\item Let's change the tempo to 140 BPM.
+
+\item I'm showing you this first to give you a taster of how most parameters/fields in lsdj are altered, by holding A and using the control pad.
+
+\item Once you've changed the tempo, hold select and push down to return to the Song Screen.
+\end{enumerate}
 
 \section{Bass}
 
 First we’ll start with a simple bassline.
 
-In Channel PU1, highlight the first top left cell by using the control pad, then double tap A (this creates a new Chain).
+\begin{enumerate}
 
-You should now see chain 01 in the cell you selected. Now you want to go to the chain screen (hold select + press right)
+\item In Channel PU1, highlight the first top left cell by using the control pad, then double tap A (this creates a new Chain).
 
-In the chain screen we want to create a phrase. Do this by double tapping A on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase 01.
+\item You should now see chain 01 in the cell you selected. Now you want to go to the chain screen (hold select + press right)
 
-Now we need to make the bassline. Still in the chain screen, highlight phrase 01 and hold select + press right, this will take you to the phrase screen for phrase 01. Enter the following notes:
+\item In the chain screen we want to create a phrase. Do this by double tapping A on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase 01.
 
+\item Now we need to make the bassline. Still in the chain screen, highlight phrase 01 and hold select + press right, this will take you to the phrase screen for phrase 01. Enter the following notes:
+\begin{verbatim}
 0.
-
 1.
-
 2. C3
-
 3.
-
 4.
-
 5.
-
 6. C3
-
 7.
-
 8.
-
 9.
-
 A. C3
-
 B.
-
 C.
-
 D.
-
 E. C3
-
 F.
+\end{verbatim}
 
-If you press play (start) you will hear the Game Boy burst into life. It’s not much (and certainly not a bassline) but it’s a start.
+\item If you press play (start) you will hear the Game Boy burst into life. It’s not much (and certainly not a bassline) but it’s a start.
 
-Ok, we need to go back and create 3 more phrases in chain 01 (if you think about it, most dance/pop music travels in the 4/4 timing. That’s what we’re aiming for here to get you familiar with the program)
+\item Ok, we need to go back and create 3 more phrases in chain 01 (if you think about it, most dance/pop music travels in the 4/4 timing. That’s what we’re aiming for here to get you familiar with the program) %TODO
 
-To go back to the chain screen press and hold select and tap left. You should be back in chain 01, and phrase 01 will be visible.
+\item To go back to the chain screen press and hold select and tap left. You should be back in chain 01, and phrase 01 will be visible.
 
-Now, instead of having to create 3 new phrases, go into them and place the notes for each again – we’re going to make it easier and faster for you;
+\item Now, instead of having to create 3 new phrases, go into them and place the notes for each again – we’re going to make it easier and faster for you;
 
-We’re going take our existing bassline section (phrase 01) and ‘clone’ it 3 times, so that we’re able to edit each one without it affecting the other.
+\item We’re going take our existing bassline section (phrase 01) and ‘clone’ it 3 times, so that we’re able to edit each one without it affecting the other. %TODO
 
-In chain 01, place 3 more phrase 01’s below the one your already have there.
+\item In chain 01, place 3 more phrase 01’s below the one your already have there.
 
-To clone, highlight the second phrase 01, hold select, then press b, then press a. The phrase number will change to one you’ve previously not used. Do this for the remaining two below.
+\item To clone, highlight the second phrase 01, hold select, then press b, then press a. The phrase number will change to one you’ve previously not used. Do this for the remaining two below.
 
-Now in chain 01 you should see 4 different phrase numbers. If you look in the phrase screens for each you will see that they’re exactly the same as each other. They all have the notes you placed inside for the first one. But because they now have different phrase numbers, you are able to edit each one independently of each other. Changing each phrase will not change another. This technique is the backbone of working quickly and efficiently with LSDJ, so it’s handy to learn this straight away.
+\item Now in chain 01 you should see 4 different phrase numbers. If you look in the phrase screens for each you will see that they’re exactly the same as each other. They all have the notes you placed inside for the first one. But because they now have different phrase numbers, you are able to edit each one independently of each other. Changing each phrase will not change another. This technique is the backbone of working quickly and efficiently with LSDJ, so it’s handy to learn this straight away.
 
-Ok the next step is to edit the notes in each new phrase to round off our bassline.
+\item Ok the next step is to edit the notes in each new phrase to round off our bassline.
 
-The first one contains all C notes. Make the second one contain E notes, make the third contain A notes and the fourth to contain B notes. For the sake of this tutorial we’ll keep it as simple as possible.
+\item The first one contains all C notes. Make the second one contain E notes, make the third contain A notes and the fourth to contain B notes. For the sake of this tutorial we’ll keep it as simple as possible.
 
-Go back to the chain screen and press start. You will see each of your phrases playing in progression, with a small black arrow pointing to which phrase is currently playing. This will loop until you press start again.
+\item Go back to the chain screen and press start. You will see each of your phrases playing in progression, with a small black arrow pointing to which phrase is currently playing. This will loop until you press start again.
 
-Ok so you can hear the bassline progressing, and at last you can hear something remotely musical! What we’d really like to do now is give that bassline a little more, well, bass!
+\item Ok so you can hear the bassline progressing, and at last you can hear something remotely musical! What we’d really like to do now is give that bassline a little more, well, bass!
 
-Navigate to the phrase screen for your first phrase (should be phrase 01).
+\item Navigate to the phrase screen for your first phrase (should be phrase 01).
 
-Next to each note you will see an instrument number (default is 00). Highlight this number (any will do) and select the instrument screen using the same method as you did with previous screens (hold select + right).
+\item Next to each note you will see an instrument number (default is 00). Highlight this number (any will do) and select the instrument screen using the same method as you did with previous screens (hold select + right).
 
-In the instrument channel, the first thing you should do (to avoid later confusion) is name your instrument. You just highlight the name box and it’ll bring up an alphabet for you to choose from. As we’re creating a bassline here, let’s call it BASS.
+\item In the instrument channel, the first thing you should do (to avoid later confusion) is name your instrument. You just highlight the name box and it’ll bring up an alphabet for you to choose from. As we’re creating a bassline here, let’s call it BASS.
 
-Press play to hear your phrase in the background (or If you wish, hold select and press start to hear your entire song in the background) while you’re editing the sound of the instrument. This is handy as you can hear what you’re changing in real-time.
+\item Press play to hear your phrase in the background (or If you wish, hold select and press start to hear your entire song in the background) while you’re editing the sound of the instrument. This is handy as you can hear what you’re changing in real-time.
 
-Next we want to edit the envelope field. If you have very basic or no understanding of this, it’s where you can control the ADSR (attack, decay, sustain, release). There are countless explanations of this on the net, read this link to do your homework.
+\item Next we want to edit the envelope field. If you have very basic or no understanding of this, it’s where you can control the ADSR (attack, decay, sustain, release). There are countless explanations of this on the net, read this link to do your homework.
 
-By default the envelope is set to A9. If you change the A up to F (hold select + up) you will hear the instrument getting louder. If you change the 9 down to 1 (hold select + left) you will hear the instrument getting shorter. Playing about with these values you should try to make the instrument sound short and punchy. A good one to try is around D3.
+\item By default the envelope is set to A9. If you change the A up to F (hold select + up) you will hear the instrument getting louder. If you change the 9 down to 1 (hold select + left) you will hear the instrument getting shorter. Playing about with these values you should try to make the instrument sound short and punchy. A good one to try is around D3.
 
-The next thing we need to edit is the wave duty cycle of the instrument. That’s the little graphic image of the wave, directly underneath the envelope field.
+\item The next thing we need to edit is the wave duty cycle of the instrument. That’s the little graphic image of the wave, directly underneath the envelope field.
 
-There are only 4 positions it can be changed to: Far left (12.5%), Left (25%), Middle (50%) and Right (75%). Hold A on the field and push right or left to switch between the 4 settings. If your bassline is playing in the background you will be able to hear the cycle being changed. The middle setting (50%) has a good low bassy sound so choose that for now.
+\item There are only 4 positions it can be changed to: Far left (12.5\%), Left (25\%), Middle (50\%) and Right (75\%). Hold A on the field and push right or left to switch between the 4 settings. If your bassline is playing in the background you will be able to hear the cycle being changed. The middle setting (50\%) has a good low bassy sound so choose that for now.
 
-Play around with the other fields in the instrument field if you like to hear what different things can affect your pulse instrument.
+\item Play around with the other fields in the instrument field if you like to hear what different things can affect your pulse instrument.
 
-Once you’ve done this the first bassline section of your track is complete. Navigate back to the song screen (hold select + keep tapping left until you arrive there).
+\item Once you’ve done this the first bassline section of your track is complete. Navigate back to the song screen (hold select + keep tapping left until you arrive there).
 
 Let’s just recap on what we’ve done so far:
 
 Now you have 1 Chain (in your song screen) Which contains 4 different Phrases (in your chain screen) Each of which contain musical notes which determine the bassline (in your phrase screens) You have edited 1 Instrument which is assigned to each of the notes in your phrase.
 
+
+\end{enumerate}
+
 \section{Lead Melody}
+
 In Channel PU2, create a new chain by double tapping A.
 
 Navigate to the chain screen and create a new phrase.
