Add first draft of commands for buttons

--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,24 @@
 \documentclass[]{article}
 
 \usepackage{url}
+\usepackage{xspace}
+
+\newcommand{\buttonStyle}[1]{\testsf{#1}\xspace}
+\newcommand{\bA}{\buttonStyle{A}}
+\newcommand{\bB}{\buttonStyle{B}}
+\newcommand{\bRight}{\buttonStyle{right}}
+\newcommand{\bLeft}{\buttonStyle{left}}
+\newcommand{\bUp}{\buttonStyle{up}}
+\newcommand{\bDown}{\buttonStyle{down}}
+\newcommand{\bStart}{\buttonStyle{start}}
+\newcommand{\bSelect}{\buttonStyle{select}}
+
 
 %opening
 \title{LSDJ Tutorial}
 \author{Sabrepulse}
 \date{Original text: 2009? \\ Edit (Erwan): \today}
+
 
 \begin{document}
 
