Formatting starting out

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \usepackage{url}
 \usepackage{xspace}
 
-\newcommand{\buttonStyle}[1]{\testsf{#1}\xspace}
+\newcommand{\buttonStyle}[1]{\textsf{#1}\xspace}
 \newcommand{\bA}{\buttonStyle{A}}
 \newcommand{\bB}{\buttonStyle{B}}
 \newcommand{\bRight}{\buttonStyle{right}}
@@ -12,6 +12,8 @@
 \newcommand{\bDown}{\buttonStyle{down}}
 \newcommand{\bStart}{\buttonStyle{start}}
 \newcommand{\bSelect}{\buttonStyle{select}}
+
+\newcommand{\test}{\buttonStyle{a}}
 
 
 %opening
@@ -57,17 +59,13 @@ In the song screen you place numbered blocks called \textit{Chains}, inside thes
 
 
 
-\item From the song screen hold select and press up. This will navigate to the options menu.
+\item From the song screen hold select and press up. This will navigate to the \textit{options menu}. Here you will be able to change many global parameters which affect your song and even the whole program.
 
-\item Here you will be able to change many global parameters which affect your song and even the whole program.
+\item Highlight the tempo\footnote{The tempo is the speed at which your entire song is played. It is measured in Beats Per Minutes, or BPM} field with the control pad, hold \bA and press \bUp, \bDown, \bLeft or \bRight to experiment with changing the tempo of the song.
 
-\item Highlight the tempo\footnote{The tempo is the speed at which your entire song is played. It is measured in Beats Per Minutes, or BPM} field with the control pad, hold A and press up, down, left or right to experiment with changing the tempo of the song.
+\item Let's change the tempo to 140~BPM. \textbf{I'm showing you this first to give you a taster of how most parameters/fields in lsdj are altered, by holding \bA and using the control pad.}
 
-\item Let's change the tempo to 140 BPM.
-
-\item I'm showing you this first to give you a taster of how most parameters/fields in lsdj are altered, by holding A and using the control pad.
-
-\item Once you've changed the tempo, hold select and push down to return to the Song Screen.
+\item Once you've changed the tempo, hold \bSelect and push \bDown to return to the Song Screen.
 \end{enumerate}
 
 \section{Bass}
